Define an AudacityException subclass for user cancellation of progress

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -245,6 +245,8 @@ audacity_SOURCES = \
 	TranslatableStringArray.h \
 	UndoManager.cpp \
 	UndoManager.h \
+	UserException.cpp \
+	UserException.h \
 	ViewInfo.cpp \
 	ViewInfo.h \
 	VoiceKey.cpp \
