--- a/win/Projects/Audacity/Audacity.vcxproj.filters
+++ b/win/Projects/Audacity/Audacity.vcxproj.filters
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="src">
@@ -898,6 +898,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\src\UserException.cpp">
       <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\blockfile\NotYetAvailableException.cpp">
+      <Filter>src\blockfile</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1824,6 +1827,9 @@
     </ClInclude>
     <ClInclude Include="..\..\..\src\UserException.h">
       <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\src\blockfile\NotYetAvailableException.h">
+      <Filter>src\blockfile</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
