--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ addons:
 before_install:
     - sudo apt-get update -qq
     - sudo apt-get install -y libwxgtk3.0-dev libgtk2.0-dev
-    - git show -s --format="wxT(\"[[http://github.com/audacity/audacity/commit/%H|%h]] of %cd\")" | tee ./src/RevisionIdent.h
+    - git show -s --format="#define REV_LONG \"%H\"%n#define REV_TIME \"%cd\"%n" | tee ./src/RevisionIdent.h
     - export CXX="g++-4.9" CC="gcc-4.9"
     - FLAGS="-w -std=gnu++11"
     - export CFLAGS="$CFLAGS $FLAGS"
