Attempt to add the rest of the makefile for portmidi
Also, fix a broken(?) include in px_linux_alsa.c.  I don't know if it was actually broken, but it seems like that was wrong.

--- a/configure.ac
+++ b/configure.ac
@@ -350,7 +350,7 @@ dnl Optional library support. Lots of things we could use, but
 dnl can do without if they aren't available.
 dnl-------------------------------------------------------------
 dnl GSTREAMER removed for 2.0.6 release
-LIBRARIES="EXPAT FFMPEG LAME LIBFLAC LIBID3TAG LIBMAD LIBNYQUIST LIBSBSMS LIBSNDFILE LIBSOUNDTOUCH LIBSOXR LIBTWOLAME LIBVAMP LIBVORBIS LV2 PORTAUDIO PORTSMF WIDGETEXTRA"
+LIBRARIES="EXPAT FFMPEG LAME LIBFLAC LIBID3TAG LIBMAD LIBNYQUIST LIBSBSMS LIBSNDFILE LIBSOUNDTOUCH LIBSOXR LIBTWOLAME LIBVAMP LIBVORBIS LV2 PORTAUDIO PORTSMF PORTMIDI WIDGETEXTRA"
 
 AC_MSG_NOTICE([Determining what libraries are available in this tree and on the system])
 
@@ -372,6 +372,7 @@ AUDACITY_CHECKLIB_LIBVORBIS
 AUDACITY_CHECKLIB_LV2
 AUDACITY_CHECKLIB_PORTAUDIO
 AUDACITY_CHECKLIB_PORTSMF
+AUDACITY_CHECKLIB_PORTMIDI
 AUDACITY_CHECKLIB_WIDGETEXTRA
 
 dnl Decide what libraries to build with, and whether to use system or local libraries
@@ -500,6 +501,7 @@ AUDACITY_CONFIG_LIBVORBIS
 AUDACITY_CONFIG_LV2
 AUDACITY_CONFIG_PORTAUDIO
 AUDACITY_CONFIG_PORTSMF
+AUDACITY_CONFIG_PORTMIDI
 AUDACITY_CONFIG_WIDGETEXTRA
 
 dnl--------------------------------------------------------------------------
