--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -328,7 +328,8 @@ am__audacity_SOURCES_DIST = BlockFile.cpp BlockFile.h DirManager.cpp \
 	TimerRecordDialog.cpp TimerRecordDialog.h TimeTrack.cpp \
 	TimeTrack.h Track.cpp Track.h TrackArtist.cpp TrackArtist.h \
 	TrackPanel.cpp TrackPanel.h TrackPanelAx.cpp TrackPanelAx.h \
-	TrackPanelCell.h TrackPanelCellIterator.h TrackPanelListener.h \
+	TrackPanelCell.h TrackPanelCellIterator.h \
+	TrackPanelDrawingContext.h TrackPanelListener.h \
 	TrackPanelMouseEvent.h TrackPanelResizeHandle.cpp \
 	TrackPanelResizeHandle.h TrackPanelResizerCell.cpp \
 	TrackPanelResizerCell.h TranslatableStringArray.h UIHandle.h \
@@ -1342,7 +1343,8 @@ audacity_SOURCES = $(libaudacity_la_SOURCES) AboutDialog.cpp \
 	TimerRecordDialog.cpp TimerRecordDialog.h TimeTrack.cpp \
 	TimeTrack.h Track.cpp Track.h TrackArtist.cpp TrackArtist.h \
 	TrackPanel.cpp TrackPanel.h TrackPanelAx.cpp TrackPanelAx.h \
-	TrackPanelCell.h TrackPanelCellIterator.h TrackPanelListener.h \
+	TrackPanelCell.h TrackPanelCellIterator.h \
+	TrackPanelDrawingContext.h TrackPanelListener.h \
 	TrackPanelMouseEvent.h TrackPanelResizeHandle.cpp \
 	TrackPanelResizeHandle.h TrackPanelResizerCell.cpp \
 	TrackPanelResizerCell.h TranslatableStringArray.h UIHandle.h \
