--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ addons:
             - gcc-4.9
 before_install:
     - sudo apt-get update -qq
-    - sudo apt-get install -y libwxgtk3.0-dev libgtk2.0-dev gettext
+    - sudo apt-get install -y libwxgtk3.0-dev libgtk2.0-dev gettext libasound2-dev alsa-utils alsa-oss
     - git show -s --format="#define REV_LONG \"%H\"%n#define REV_TIME \"%cd\"%n" | tee ./src/RevisionIdent.h
     - export CXX="g++-4.9" CC="gcc-4.9"
     - FLAGS="-w -std=gnu++11"
