Fix PortMidi automake files and update PortMidi's m4
Several of these changes are needed to correctly access PortMidi's headers without hardcoding paths.  The change to the comment of USE_PORTMIDI is because that will actually be needed in a later commit.  The remainder just correct typos or other text that wasn't fixed from when I wrote the checklib based off of portsmf's.

--- a/lib-src/portmidi/Makefile.am
+++ b/lib-src/portmidi/Makefile.am
@@ -22,8 +22,8 @@ libportmidi_s_a_SOURCES = pm_common/portmidi.c \
 # but that would mean re-organising them here (a subdirectory called portSMF to
 # keep headers in, add -I$(srcdir)/portSMF/ to AM_CXXFLAGS, change the paths
 # to the headers here and change the name of the variable to nobase_include_...
-#include_HEADERS = portmidi/portmidi.h \
-#	porttime/porttime.h
+include_HEADERS = pm_common/portmidi.h \
+	porttime/porttime.h
 
 
 AM_CFLAGS = -I$(top_srcdir)/pm_common -I$(top_srcdir)/porttime
