Bug 1689: Fix MIDI devices not being found on linux
PortMidi requires PMALSA to be defined to compile with ALSA support.  Without it, it simply does not find any devices.  (There is also PMNULL, but the files controlled by that define do not actually exist)

--- a/lib-src/portmidi/configure.ac
+++ b/lib-src/portmidi/configure.ac
@@ -121,6 +121,9 @@ dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
 AC_TYPE_SIZE_T
 
+dnl PMALSA indicates that portmidi should be built with alsa support (needed)
+AC_DEFINE(PMALSA, 1)
+
 AC_CONFIG_FILES([Makefile portmidi.pc portmidi-uninstalled.pc])
 
 AC_OUTPUT
