WXINTL_NO_GETTEXT_MACRO defined in compiler options...
... so even if you neglect to include Audacity.h, it applies

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -52,6 +52,7 @@ audacity_CPPFLAGS = \
 	-std=c++11 \
 	-Wno-deprecated-declarations \
 	-D__STDC_CONSTANT_MACROS \
+	-DWXINTL_NO_GETTEXT_MACRO \
 	-DLIBDIR=\"$(libdir)\" \
 	$(EXPAT_CFLAGS) \
 	$(FILEDIALOG_CFLAGS) \
