--- a/win/Projects/Audacity/Audacity.vcxproj.filters
+++ b/win/Projects/Audacity/Audacity.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="src">
@@ -2338,5 +2338,10 @@
     <copy Include="..\..\..\plug-ins\rhythmtrack.ny">
       <Filter>plug-ins</Filter>
     </copy>
+  </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="..\..\Audacity.exe.manifest">
+      <Filter>Resources</Filter>
+    </Manifest>
   </ItemGroup>
 </Project>
