--- a/src/audacity.desktop.in
+++ b/src/audacity.desktop.in
@@ -4,6 +4,7 @@ GenericName=Sound Editor
 GenericName[ca]=Editor d'àudio
 GenericName[da]=Lydredigeringsprogram
 GenericName[de]=Audio-Editor
+GenericName[el]=Επεξεργαστής ήχου
 GenericName[fr]=Éditeur audio
 GenericName[pt_BR]=Editor de áudio
 GenericName[ru]=Редактор звуковых файлов
@@ -12,11 +13,11 @@ Comment=Record and edit audio files
 Comment[ca]=Enregistreu i editeu els fitxers d'àudio
 Comment[da]=Optag og rediger lydfiler
 Comment[de]=Audio-Dateien aufnehmen und bearbeiten
+Comment[el]=Ηχογράφηση και επεξεργασία αρχείων ήχου
 Comment[fr]=Enregistrer et éditer des fichiers audio
 Comment[pt_BR]=Gravar e editar arquivos de áudio
 Comment[ru]=Запись и редактирование звуковых файлов
 Comment[uk]=Запис і редагування звукових файлів
-
 Icon=@AUDACITY_NAME@
 
 Type=Application
