--- a/src/audacity.desktop.in
+++ b/src/audacity.desktop.in
@@ -7,6 +7,7 @@ GenericName[de]=Audio-Editor
 GenericName[el]=Επεξεργαστής ήχου
 GenericName[fr]=Éditeur audio
 GenericName[pt_BR]=Editor de áudio
+GenericName[pt_PT]=Editor de áudio
 GenericName[ru]=Редактор звуковых файлов
 GenericName[uk]=Редактор звукових файлів
 Comment=Record and edit audio files
@@ -16,8 +17,10 @@ Comment[de]=Audio-Dateien aufnehmen und bearbeiten
 Comment[el]=Ηχογράφηση και επεξεργασία αρχείων ήχου
 Comment[fr]=Enregistrer et éditer des fichiers audio
 Comment[pt_BR]=Gravar e editar arquivos de áudio
+Comment[pt_PT]=Gravar e editar ficheiros de áudio
 Comment[ru]=Запись и редактирование звуковых файлов
 Comment[uk]=Запис і редагування звукових файлів
+
 Icon=@AUDACITY_NAME@
 
 Type=Application
